force-app/main/default/objects/Gear_Item__c/Gear_Item__c.object-meta.xml
<CustomObject>
    <label>Gear Item</label>
    <pluralLabel>Gear Items</pluralLabel>
    <description>Represents a piece of lunar exploration equipment in the Lunar Basecamp Outfitters inventory. Tracks status, maintenance schedules, and rental pricing for all gear.</description>
    <nameField>
        <label>Gear Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>