force-app/main/default/objects/Gear_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <description>Equipment category classifying what type of lunar gear this item is.</description>
    <inlineHelpText>Select the equipment category that best describes this gear item.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pressure Suit</fullName>
            </value>
            <value>
                <fullName>Oxygen System</fullName>
            </value>
            <value>
                <fullName>Boots</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
            <value>
                <fullName>Tether Kit</fullName>
            </value>
            <value>
                <fullName>Crater Anchor</fullName>
            </value>
            <value>
                <fullName>Communication Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>