force-app/main/default/objects/Gear_Item__c/fields/Daily_Rental_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rental_Rate__c</fullName>
    <label>Daily Rental Rate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Standard daily rental rate charged to explorers for use of this gear item during an expedition.</description>
    <inlineHelpText>Per-day rental cost for this item. Used to calculate total expedition gear costs.</inlineHelpText>
</CustomField>