force-app/main/default/objects/Gear_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Commercial or model name of the gear item (e.g., &quot;Artemis Mark IV Pressure Suit&quot;).</description>
    <inlineHelpText>Enter the full commercial or model name of this gear item.</inlineHelpText>
</CustomField>