force-app/main/default/objects/Gear_Item__c/fields/Maintenance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Due_Date__c</fullName>
    <label>Maintenance Due Date</label>
    <type>Date</type>
    <description>Date by which the next scheduled maintenance inspection must be completed for this gear item to remain mission-eligible.</description>
    <inlineHelpText>Next scheduled maintenance date. Gear cannot be rented if maintenance is overdue.</inlineHelpText>
</CustomField>