force-app/main/default/objects/Gear_Item__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Original acquisition cost of this gear item. Used for asset valuation, insurance coverage calculations, and depreciation tracking.</description>
    <inlineHelpText>Original purchase price of this equipment. Used for insurance and asset management purposes.</inlineHelpText>
</CustomField>