force-app/main/default/objects/Gear_Item__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Manufacturer serial number uniquely identifying this individual gear item. Used for maintenance tracking and audit trails.</description>
    <inlineHelpText>Enter the manufacturer serial number exactly as printed on the equipment. Must be unique across all gear inventory.</inlineHelpText>
</CustomField>